WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47785
Web Inspector: [REGRESSION] Inspector window visible during run-webkit-tests
https://bugs.webkit.org/show_bug.cgi?id=47785
Summary
Web Inspector: [REGRESSION] Inspector window visible during run-webkit-tests
Adam Barth
Reported
2010-10-17 17:14:55 PDT
On my Mac (Snow Leopard), the inspector window shows up on screen during run-webkit-test. Can we hide the window? This is especially annoying when running a commit-queue node on my machine because the window flashes up at random times. Thanks!
Attachments
[patch] initial version.
(1.80 KB, patch)
2010-10-18 03:26 PDT
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2010-10-17 23:40:23 PDT
abarth claims it is a regression started couple of days ago.
Adam Barth
Comment 2
2010-10-17 23:45:57 PDT
Eric saw it too. He thought his machine was being haxored.
Ilya Tikhonovsky
Comment 3
2010-10-18 03:26:35 PDT
Created
attachment 71014
[details]
[patch] initial version.
WebKit Commit Bot
Comment 4
2010-10-18 05:46:34 PDT
Comment on
attachment 71014
[details]
[patch] initial version. Clearing flags on attachment: 71014 Committed
r69956
: <
http://trac.webkit.org/changeset/69956
>
WebKit Commit Bot
Comment 5
2010-10-18 05:46:40 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-10-18 07:01:45 PDT
http://trac.webkit.org/changeset/69956
might have broken Leopard Intel Release (Tests) The following tests are not passing: media/video-played-reset.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug