2010-10-18  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: [REGRESSION] Inspector window visible during run-webkit-tests.
        The initial state of an inspector setting should stay untouched
        if the profile has no value for it.

        https://bugs.webkit.org/show_bug.cgi?id=47785

        * inspector/InspectorState.cpp:
        (WebCore::InspectorState::loadFromSettings):

Canonical link: https://commits.webkit.org/60522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69956 268f45cc-cd09-0410-ab3c-d52691b4dbfc